feat: add bypass enpoints logic to JWT middleware
